# --- !Ups

CREATE TABLE REVISION_ENTRY_FEEDBACK (
  id              BIGINT    NOT NULL PRIMARY KEY AUTO_INCREMENT,
  parentID        BIGINT,
  authorID        BIGINT    NOT NULL,
  revisionEntryID BIGINT    NOT NULL,
  lineNumber      BIGINT,
  logMessage      CLOB      NOT NULL,
  date            TIMESTAMP NOT NULL,
  feedbackType    INT       NOT NULL
);

-- foreign key constraints :
ALTER TABLE REVISION_ENTRY_FEEDBACK ADD CONSTRAINT REVISION_ENTRY_FEEDBACK_FK1 FOREIGN KEY (authorID) REFERENCES AUTHORS (id);
ALTER TABLE REVISION_ENTRY_FEEDBACK ADD CONSTRAINT REVISION_ENTRY_FEEDBACK_FK2 FOREIGN KEY (revisionEntryID) REFERENCES REVISION_ENTRIES (id);
ALTER TABLE REVISION_ENTRY_FEEDBACK ADD CONSTRAINT REVISION_ENTRY_FEEDBACK_FK3 FOREIGN KEY (parentID) REFERENCES REVISION_ENTRY_FEEDBACK (id);


# --- !Downs

DROP TABLE REVISION_ENTRY_FEEDBACK;
