@startuml

class AUTHORS
class EVENTS
class REVISION_ENTRIES_CONTENT
class REVISION_ENTRY_FEEDBACK
class REPOS
class REVISIONS
class REVISION_ENTRIES
class REPO_AUTHORS

REPOS "1" --* "*" REVISIONS
REPOS "1" --* "*" REPO_AUTHORS
REPO_AUTHORS "0..1" --* "*" REVISIONS
REVISION_ENTRIES "1" --* "*" REVISION_ENTRY_FEEDBACK
REVISIONS "1" --* "*" REVISION_ENTRIES
REVISION_ENTRIES_CONTENT "0..1" --* "1" REVISION_ENTRIES
AUTHORS "1" --* "*" REVISION_ENTRY_FEEDBACK
AUTHORS "0..1" --* "*" REPO_AUTHORS
REVISION_ENTRY_FEEDBACK "0..1" --* "*" REVISION_ENTRY_FEEDBACK

@enduml